--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ h1{
   }
   
   p{
-    color: #ff0000;
+    color: #000000;
     font-size: 20px;
     font-family: 'Akaya Telivigala', cursive;
   }
